# Project_Capstone_WindownApp

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  temp_gitignore.txt
BE/Processes/: updateprocessesui.cpp  updateprocessesui.h
UI/Components/: NavigationBar.qml
UI/Screens/MainPerformance/: MainPerformanceView.qml
UI/Screens/Performance/: ComponentChartUpdater.qml  ComponentTitleBar.qml  CpuChart.qml  CustomLegend.qml  MemChart.qml  PerformanceView.qml  TestCpuLineChart.qml
UI/Screens/Popup/: PopupView.qml
UI/Screens/Processes/: ProcessHeader.qml  ProcessView.qml
UI/Screens/ProcessesListView/: ColorUtils.qml  ColumnUtils.qml  ComponentTable.qml  HeaderView.qml  ProcessesListView.qml  TableProcessView.qml
UI/Screens/SettingConfig/: ConfigField.qml  SettingView.qml
UI/Screens/StressTest/: CustomLabel.qml  StressTestView.qml
config/: Priority.txt  WhileList.txt  ivi_settings.ini  my_ivi_settings.ini
core/: IProcessManager.h  ISystemMonitor.h  configmanager.cpp  configmanager.h  dataprocessor.cpp  dataprocessor.h  ivisocketserver.cpp  ivisocketserver.h  overloaddetector.cpp  overloaddetector.h  processmanager.cpp  processmanager.h  systemmonitor.cpp  systemmonitor.h
model/: OverloadConfig.h  OverloadSnapshot.h  ProcessSelectionResult.h  cpucore.cpp  cpucore.h  cpugeneral.cpp  cpugeneral.h  processinfo.cpp  processinfo.h  systemcpu.cpp  systemcpu.h  systemmem.cpp  systemmem.h  systemstats.cpp  systemstats.h
setting/: configkeys.h
storage/: csvwriter.cpp  csvwriter.h  csvwritermanager.cpp  csvwritermanager.h  datastorageworker.cpp  datastorageworker.h
tests/: test_IviSocketServer.cpp
thread/: threadmanager.cpp  threadmanager.h
viewmodel/: configviewmodel.cpp  configviewmodel.h  cpustatsviewmodel.cpp  cpustatsviewmodel.h  memstatsviewmodel.cpp  memstatsviewmodel.h  processlistmodel.h  processlistviewmodel.cpp  processlistviewmodel.h  systemstatsviewmodel.cpp  systemstatsviewmodel.h
